public/css/herostyles.css
/* ... */
.hero__content .message__content {
  border-radius: 15px;
  min-height: 50px;
  align-items: center;
  display: inline-flex;
  background: #fff;
  padding: 10px;
}
.hero__content .message--left {
  justify-content: center;
}
.hero__content .message--left .message__content {
  background: #fff;
  color: #aaaaaa;
}
.hero__content .message--typing .message__content div {
  animation: wave 0.5s ease infinite;
  border-radius: 100%;
  height: 8px;
  width: 8px;
  background: #b3b3b3;
  margin: 2px;
}
.hero__content .message--typing .message__content div:nth-child(1) {
  animation-delay: 0.1s;
}
.hero__content .message--typing .message__content div:nth-child(2) {
  animation-delay: 0.2s;
}
.hero__content .message--typing .message__content div:nth-child(3) {
  animation-delay: 0.3s;
}
@keyframes wave {
  50% {
    transform: translate(0, -150%);
  }
}
#footer {
  position: relative;
  background-image: url("../img/wave.svg");
  background-repeat: round;
  height: 350px;
}
#footer .wave_box {
  width: 100%;
  position: absolute;
  bottom: 20px;
}
#footer .wave_box span {
  font-weight: 900;
  font-family: lato;
  font-style: italic;
  text-transform: uppercase;
  font-size: 4rem;
  color: #ddd;
  vertical-align: middle;
}
#footer .wave_box span:first-of-type {
  color: #b1151a;
}
#footer .copyright {
  color: #ddd;
  font-weight: 700;
  letter-spacing: 3px;
}
#footer .coc a {
  font-weight: 700;
  text-decoration: underline;
  color: white;
}
#footer .coc a:hover {
  color: #820507;
}
.flip {
  position: relative;
}
.flip > .front,
.flip > .back {
  display: block;
  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
  transition-duration: 1s;
  transition-property: transform, opacity;
}
.flip > .front {
  transform: rotateY(0deg);
}
.flip > .back {
  position: absolute;
  opacity: 0;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  transform: rotateY(-180deg);
}
.flip.flip-vertical > .back {
  transform: rotateX(-180deg);
}
#prizes .flip {
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
}
#prizes .flip > .front,
#prizes .flip > .back {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  color: white;
  background-size: cover;
  background-position: center;
  height: 400px;
  padding: 3em;
  background: #313131;
  border-radius: 25px;
}
#prizes .flip > .front h2,
#prizes .flip > .front h1,
#prizes .flip > .front h4,
#prizes .flip > .back h2,
#prizes .flip > .back h1,
#prizes .flip > .back h4 {
  color: #fff;
}
#prizes .flip > .front p,
#prizes .flip > .back p {
  line-height: 160%;
  color: #fff;
}
#prizes .flip > .front li,
#prizes .flip > .back li {
  list-style-type: disc;
}
#prizes .flip .small {
  height: 300px;
}
#prizes .flip .front {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
#sponsorChallenges .flip {
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
}
#sponsorChallenges .flip > .front,
#sponsorChallenges .flip > .back {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  color: white;
  background-size: cover;
  background-position: center;
  height: auto;
  padding: 3em;
  background: #313131;
  border-radius: 25px;
}
#sponsorChallenges .flip > .front h2,
#sponsorChallenges .flip > .front h1,
#sponsorChallenges .flip > .back h2,
#sponsorChallenges .flip > .back h1 {
  color: #fff;
}
#sponsorChallenges .flip > .front p,
#sponsorChallenges .flip > .back p {
  line-height: 160%;
  color: #fff;
}
#sponsorChallenges .flip .front {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
@media(max-width:1024px) and (min-width:849px) {
  .hero{
    height: 900px !important;
  }
  .hero__content__details{
    transform: scale(1.3)
  }
  .bottom-right{
    position: absolute;
    bottom: 0;
    left: -40vw;
  }
  .top-right{
    right: -20vw !important;
  }
}
@media(max-width:850px) and (min-width:600px){
  .hero{
    height: 950px !important;
  }
  .hero__content__details{
    transform: scale(1.3)
  }
  .top-right{
    right: 50vw !important;
    top: 110vh !important;
  }
  .bottom-right{
    bottom: -80vh !important;
    right: 0 !important;
  }
  .bottom-center{
    bottom: -65vh !important;
  }
}
@media(max-width:600px) and (min-width:425px){
  .hero{
    height: 850px !important;
  }
  .hero__content__details{
    transform: scale(1);
  }
  .top-right{
    right: 20vw !important;
    top: 90vh !important;
  }
  .bottom-right{
    bottom: -80vh !important;
    right: -43vw !important;
  }
  .bottom-center{
    bottom: -65vh !important;
  }
}
@media(max-width:425px){
  .hero{
    height: 850px !important;
  }
  .chat{
    width: 320px !important;
    height: 225px !important;
  }
  .top-right{
    right: 5vw !important;
    top: 90vh !important;
  }
  .bottom-right{
    bottom: -90vh !important;
    right: -60vw !important;
  }
  .bottom-center{
    bottom: -65vh !important;
  }
}
@media (max-width: 1024px) {
  .hero {
    background-size: 1500px;
    background-position: center;
    height: 1200px;
  }
  .hero__content {
    top: 50px;
  }
  .hero__content .row {
    display: block;
  }
  .hero__content__details .chat {
    backdrop-filter: unset;
  }
  .hero__content__details .hackathon__details {
    margin-left: auto;
    margin-right: auto;
  }
  .hero__content__details .hackathon__details__title {
    font-size: 40px;
    text-align: center;
  }
  .hero__content__details .countdown__wrapper {
    margin-left: auto;
    margin-right: auto;
  }
  .hero__content__details .countdown__wrapper p {
    text-align: center;
  }
  .hero__content__details .registration__details {
    margin-left: auto;
    margin-right: auto;
  }
  .hero__content__details .chat {
    margin: 30px auto;
    max-width: 320px;
  }
  .hero__content__banner {
    margin-left: 0;
  }
  .hero__content__banner .banner_img {
    max-width: 200px;
  }
  #profile-owl.owl-theme .owl-nav {
    display: none;
  }
}
/* ... */

